# fastapi-boilerplate

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: models.py  schemas.py  views.py
app/routers/: users.py
core/: config.py  database.py  factory.py
tests/: conftest.py
tests/routers/: test_users.py
