[tool.poetry]
name = "fastapi_boilerplate"
version = "0.1.0"
description = ""
authors = ["Ali Heyderli <ali.heyderli@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.65.2"
uvicorn = "^0.14.0"
python-dotenv = "^0.18.0"
peewee = "^3.14.4"
aiomysql = "^0.0.21"
pytest = "^6.2.4"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
